rm personal website

--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -25,7 +25,7 @@
 %\date{September 9, 1985}	% Here you can change the date presented in the paper title
 %\date{} 					% Or removing it
 
-\author{ \href{https://orcid.org/0000-0002-5924-2464}{\includegraphics[scale=0.06]{orcid.pdf}\hspace{1mm}J.~Stachelek}\thanks{\href{https://jsta.rbind.io}{https://jsta.rbind.io}} \\
+\author{ \href{https://orcid.org/0000-0002-5924-2464}{\includegraphics[scale=0.06]{orcid.pdf}\hspace{1mm}J.~Stachelek} \\
 	Earth System Observations\\
 	Los Alamos National Laboratory\\
 	Los Alamos, NM, USA, 87544 \\
