censored predictions match hydrolakes finally

--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -132,9 +132,9 @@ Visual inspection of the frequentist method of computing on the edf appeared to 
 
 \begin{figure}
 	\centering
-	\includegraphics{figures/predict_area-1}
+	\includegraphics{figures/predict_censor-1}
 	\caption{Censored lake area edf (solid line) and cdf estimate (dashed line).}
-	\label{fig:predict_area}
+	\label{fig:predict_censor}
 \end{figure}
 
 \begin{figure}
