--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -20,7 +20,7 @@
 
 
 
-\title{Quantifying uncertainty in Pareto lake area estimates}
+\title{Quantifying uncertainty in Pareto estimates of global lake area}
 
 %\date{September 9, 1985}	% Here you can change the date presented in the paper title
 %\date{} 					% Or removing it
