fight with refs not showing

--- a/manuscript/pareto-lakes.bib
+++ b/manuscript/pareto-lakes.bib
@@ -361,7 +361,7 @@
   number = {1}
 }
 
-@article{shaliziAdvancedDataAnalysis2017,
+@book{shaliziAdvancedDataAnalysis2017,
   title = {Advanced {{Data Analysis}} from an {{Elementary Point}} of {{View}}},
   author = {Shalizi, Cosma Rohilla},
   year = {2017},
@@ -409,7 +409,7 @@
   number = {3}
 }
 
-@article{team2013r,
+@manual{team2013r,
   title = {R: {{A}} Language and Environment for Statistical Computing},
   author = {Team, R Core and others},
   year = {2018},
